--- a/action.yml
+++ b/action.yml
@@ -41,6 +41,7 @@ runs:
         OPENAI_API_KEY: ${{ inputs.OPENAI_API_KEY }}
         BASE_SHA: ${{ github.event.pull_request.base.sha }}
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+        REVIEW_TYPE: ${{ inputs.REVIEW_TYPE }}
 
 branding:
   icon: 'code'
