--- a/code-review-gpt/package.json
+++ b/code-review-gpt/package.json
@@ -61,6 +61,9 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.4.3",
+    "jest-environment-node": "^29.4.2",
+    "jest-mock-extended": "2.0.4",
     "npm-dts": "^1.3.12",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
